feat: allow view remote stream

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="app"></div>
         <button id="connect">Connect</button>
-        <audio controls muted id="audio-main"></audio>
+        <audio controls autoplay id="audio-main"></audio>
         <video
             controls
             muted
