feat: added auto sync sdp with server

--- a/samples/echo-fast/index.html
+++ b/samples/echo-fast/index.html
@@ -49,6 +49,8 @@
         <!-- This is for control buttons -->
         <div class="flex flex-row justify-center p-4 space-x-2 w-full">
             <button id="connect" class="btn btn-success">Connect</button>
+            <button id="view" class="btn">View</button>
+            <button id="unview" class="btn">Unview</button>
             <button id="disconnect" class="btn btn-warning">Disconnect</button>
         </div>
         <script type="module" src="/src/samples/echo_fast.ts"></script>
