--- a/samples/echo-lazy/index.html
+++ b/samples/echo-lazy/index.html
@@ -49,6 +49,7 @@
         <!-- This is for control buttons -->
         <div class="flex flex-row justify-center p-4 space-x-2 w-full">
             <button id="connect" class="btn btn-success">Connect</button>
+            <button id="share" class="btn">Share</button>
             <button id="join" class="btn">Join room</button>
             <button id="leave" class="btn">Leave room</button>
             <button id="disconnect" class="btn btn-warning">Disconnect</button>
