feat: sender attach, detach

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div><a href="/samples/echo-fast/">Echo join room fast</a></div>
             <div><a href="/samples/echo-lazy/">Echo join room lazy</a></div>
             <div><a href="/samples/multi-track-receivers/">Multi track receivers</a></div>
+            <div><a href="/samples/switch-sender-track/">Switch sender track</a></div>
         </div>
     </body>
 </html>
