--- a/samples/multi-track-receivers/index.html
+++ b/samples/multi-track-receivers/index.html
@@ -10,7 +10,7 @@
             type="text/css"
         />
         <script src="https://cdn.tailwindcss.com"></script>
-        <title>Echo fast</title>
+        <title>Multi track receivers</title>
     </head>
     <body class="p-6">
         <div class="p-4 w-full text-center">
