--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="pl-6">
             <div><a href="/samples/echo-fast/">Echo join room fast</a></div>
             <div><a href="/samples/echo-lazy/">Echo join room lazy</a></div>
+            <div><a href="/samples/echo-simulcast/">Echo simulcast</a></div>
             <div><a href="/samples/multi-track-receivers/">Multi track receivers</a></div>
             <div><a href="/samples/switch-sender-track/">Switch sender track</a></div>
         </div>
